--- a/pokedex_app/pubspec.yaml
+++ b/pokedex_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.4.0
   flutter_screenutil: ^5.9.0
   google_fonts: ^6.1.0
+  cached_network_image: ^3.3.1
 
 dev_dependencies:
   flutter_test:
