--- a/pokedex_app/pubspec.yaml
+++ b/pokedex_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_screenutil: ^5.9.0
   google_fonts: ^6.1.0
   cached_network_image: ^3.3.1
+  path_provider_foundation: ^2.3.2
+  
 
 dev_dependencies:
   flutter_test:
